Fix sidebar buttons on iPhone

--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -32,16 +32,17 @@ $sidebarPadding: 30px;
   top: 10px;
   right: 16px;
   transition: opacity 0.3s ease-in-out, $sidebarTransition;
-  .shown & {
+  &.shown {
     opacity: 0.5;
     right: calc(#{variables.$sidebarWidth} + 16px);
     //display: none;
   }
-  width: 32px;
-  height: 32px;
+  width: 38px;
+  height: 38px;
   background: white;
   padding: 4px;
   border: 1px solid lightgray;
+  z-index: 99999;
   box-shadow: 0 0 1px black;
   border-radius: 2px;
   cursor: pointer;
@@ -51,14 +52,18 @@ $sidebarPadding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  svg {
+    height: 100%;
+  }
 }
 
 .sidebarCloseButton {
   position: fixed;
   right: 24px;
   top: 10px;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 30px;
 }
 
 .sidebarContent {
